--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -13,10 +13,13 @@ chrono = { version = "0.4.38", features = ["serde"] }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
+serde_json = "1.0.117"
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
+jwt-simple = "0.12.9"
 
 [dev-dependencies]
 sqlx-db-tester = "0.4.0"
+http-body-util = "0.1.1"
