--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "chat_server"
+name = "chat-server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+test-utils = ["sqlx-db-tester", "http-body-util"]
 
 [dependencies]
 thiserror = { workspace = true }
@@ -31,8 +34,9 @@ axum-extra = { version = "0.9.3", features = ["typed-header"] }
 sha1 = "0.10.6"
 hex = "0.4.3"
 mime_guess = "2.0.4"
-chat-core = { workspace = true, path = "../chat_core" }
+chat-core = { workspace = true }
+sqlx-db-tester = { version = "0.4.0", optional = true }
+http-body-util = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
-sqlx-db-tester = "0.4.0"
-http-body-util = "0.1.1"
+chat-server = { workspace = true, features = ["test-utils"] }
