--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -37,6 +37,10 @@ mime_guess = "2.0.4"
 chat-core = { workspace = true }
 sqlx-db-tester = { version = "0.4.0", optional = true }
 http-body-util = { version = "0.1.1", optional = true }
+utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
+utoipa-redoc = { version = "3.0.0", features = ["axum"] }
+utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
 
 [dev-dependencies]
 chat-server = { workspace = true, features = ["test-utils"] }
